--- a/src/components/search/Card/index.scss
+++ b/src/components/search/Card/index.scss
@@ -3,14 +3,14 @@
 @import 'styles/mixins/index.scss';
 
 .card {
-  @include margin-t-16;
   @include bg-white;
   @include border-radius-m;
+  margin-top: $spacing-px-16;
 }
 
 .card__title {
-  @include grid-padding;
   @include border-radius-top-m;
+  padding: $grid-padding;
   background-color: var(--gray100);
 }
 
@@ -21,7 +21,7 @@
   padding: $spacing-px-24 $spacing-px-16 $spacing-px-32 $spacing-px-20;
 
   li:not(:last-child) {
-    @include margin-b-20;
+    margin-bottom: $spacing-px-20;
   }
 }
 
