--- a/src/components/shared/FormGroup/index.scss
+++ b/src/components/shared/FormGroup/index.scss
@@ -20,7 +20,7 @@
   }
 
   .form-group__label__text {
-    @include margin-b-8;
+    margin-bottom: $spacing-px-8;
   }
 
   .form-group__validationText {
@@ -32,7 +32,7 @@
 
   &.form-group--has-label {
     position: relative;
-    
+
     .form-group__validationText {
       position: absolute;
       right: 0;
@@ -46,7 +46,7 @@
       position: relative;
       top: -$spacing-px-2;
       margin-left: $spacing-px-2;
-  
+
       color: map.get($color-danger, 600);
       content: '*';
     }
