--- a/src/components/search/CardFormHeader/index.scss
+++ b/src/components/search/CardFormHeader/index.scss
@@ -8,13 +8,13 @@
 
 .card-form-header__title {
   @include font-content;
-  @include font-weight-bold;
+  font-weight: $font-weight-bold;
   @include font-size-content-h2;
-  @include line-height-44;
+  line-height: $line-height-44;
 }
 
 .card-form-header__definition {
   @include font-content;
   @include font-size-content;
-  @include line-height-24;
+  line-height: $line-height-24;
 }
