--- a/src/components/search/SearchSuccessContent/index.scss
+++ b/src/components/search/SearchSuccessContent/index.scss
@@ -15,7 +15,7 @@
 
   p {
     @include font-size-ui-sm;
-    @include line-height-20;
+    line-height: $line-height-20;
     margin-bottom: $spacing-px-24;
     color: var(--gray800);
   }
@@ -34,8 +34,8 @@
       text-decoration: underline;
       text-align: left;
 
-      @include line-height-20;
-      @include font-weight-bold;
+      line-height: $line-height-20;
+      font-weight: $font-weight-bold;
     }
   }
 }
