--- a/src/components/shared/ButtonLegend/index.scss
+++ b/src/components/shared/ButtonLegend/index.scss
@@ -2,16 +2,16 @@
 @import 'styles/variables.scss';
 @import 'styles/utility-mixins/index.scss';
 
-.button--legend {  
-  @include line-height-20;
+.button--legend {
+  line-height: $line-height-20;
   @include border;
   @include border-radius-sm;
 
   .button__legend {
-    display: block;
     @include font-size-ui-sssm;
-    @include font-weight-light;
-    @include line-height-12;
+    display: block;
+    font-weight: $font-weight-light;
+    line-height: $line-height-12;
     color: var(--gray500);
   }
 }
