--- a/src/components/shared/BackNav/index.scss
+++ b/src/components/shared/BackNav/index.scss
@@ -3,12 +3,12 @@
 @import 'styles/mixins/index.scss';
 
 .form-header {
-  @include bg-primary;
   @include font-ui;
   @include font-size-ui-sm;
   @include flex-row;
   @include flex-align-center;
   //letter-spacing: $letter-spacing-05;
+  background-color: var(--primary1000);
   padding: $grid-padding--narrow;
   color: #fff;
 }
