--- a/src/components/shared/Spinner/index.scss
+++ b/src/components/shared/Spinner/index.scss
@@ -6,7 +6,7 @@
   height: 100%;
   @include flex-column;
   @include flex-align-justify-center;
-  @include bg-white;
+  background-color: #fff;
 }
 
 .spinner__spinner {
