--- a/src/components/shared/Spinner/index.scss
+++ b/src/components/shared/Spinner/index.scss
@@ -25,7 +25,7 @@
     top: 0;
     bottom: 0;
 
-    @include border-radius-full;
+    border-radius: px-to-rem(9999px);
     border: $spacing-px-2 solid map.get($color-gray, 200);
     border-right-color: map.get($color-gray, 800);
     animation: spinner 1.1s infinite linear;
