--- a/src/styles/mixins/_button.scss
+++ b/src/styles/mixins/_button.scss
@@ -1,6 +1,6 @@
 @mixin button--icon {
   background-color: transparent;
-  @include border-none;
+  border: none;
   line-height: 0;
   padding: 0;
 }
