--- a/src/components/shared/Spinner/index.scss
+++ b/src/components/shared/Spinner/index.scss
@@ -4,8 +4,10 @@
 
 .spinner {
   height: 100%;
-  @include flex-column;
-  @include flex-align-justify-center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: #fff;
 }
 
