--- a/src/components/shared/Warning/index.scss
+++ b/src/components/shared/Warning/index.scss
@@ -4,16 +4,18 @@
 
 .warning {
   height: 100%;
-  @include flex-column;
+  display: flex;
+  flex-direction: column;
   background-color: #fff;
   text-align: center;
 }
 
 .warning__content {
-  @include flex-grow;
-  @include flex-row;
-  @include flex-align-justify-center;
   @include font-ui;
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
   padding-left: $grid-padding;
   padding-right: $grid-padding;
 
@@ -50,6 +52,6 @@
 }
 
 .warning__footer {
-  @include flex-no-grow;
+  flex-grow: 0;
   padding: $spacing-px-40 0;
 }
