--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $grid-size: px-to-rem(8px);
 $spacing-px-2: 0.25 * $grid-size;
 $spacing-px-4: 0.5 * $grid-size;
 $spacing-px-8: 1 * $grid-size;
+$spacing-px-10: 1.25 * $grid-size;
 $spacing-px-12: 1.5 * $grid-size;
 $spacing-px-16: 2 * $grid-size;
 $spacing-px-20: 2.5 * $grid-size;
@@ -55,7 +56,7 @@ $z-index-modal: 1000;
 
 // Shared colors
 $color-gray: (
-  100: #f5f8fa,
+  100: #f5f9fc,
   200: #e4e9eb,
   300: #cbd5d9,
   400: #9aabb1,
@@ -214,6 +215,7 @@ $line-height-28: px-to-rem(28px);
 $line-height-32: px-to-rem(32px);
 $line-height-40: px-to-rem(40px);
 $line-height-44: px-to-rem(44px);
+$line-height-60: px-to-rem(60px);
 
 // Letter-spacing
 $letter-spacing-05: px-to-rem(0.5px);
