study training - add back side

--- a/src/components/shared/Controls/index.scss
+++ b/src/components/shared/Controls/index.scss
@@ -12,4 +12,11 @@
   &--narrow {
     padding: $grid-padding--narrow;
   }
+
+  &--row {
+    display: flex;
+    flex-direction: row;
+
+    column-gap: $spacing-px-6;
+  }
 }
