--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,12 +10,14 @@
 $grid-size: px-to-rem(8px);
 $spacing-px-2: 0.25 * $grid-size;
 $spacing-px-4: 0.5 * $grid-size;
+$spacing-px-6: 0.75 * $grid-size;
 $spacing-px-8: 1 * $grid-size;
 $spacing-px-10: 1.25 * $grid-size;
 $spacing-px-12: 1.5 * $grid-size;
 $spacing-px-16: 2 * $grid-size;
 $spacing-px-20: 2.5 * $grid-size;
 $spacing-px-24: 3 * $grid-size;
+$spacing-px-28: 3.5 * $grid-size;
 $spacing-px-32: 4 * $grid-size;
 $spacing-px-40: 5 * $grid-size;
 $spacing-px-48: 6 * $grid-size;
@@ -213,6 +215,7 @@ $line-height-20: px-to-rem(20px);
 $line-height-24: px-to-rem(24px);
 $line-height-28: px-to-rem(28px);
 $line-height-32: px-to-rem(32px);
+$line-height-36: px-to-rem(36px);
 $line-height-40: px-to-rem(40px);
 $line-height-44: px-to-rem(44px);
 $line-height-60: px-to-rem(60px);
