--- a/src/components/shared/Spinner/index.scss
+++ b/src/components/shared/Spinner/index.scss
@@ -1,4 +1,3 @@
-@use 'sass:map';
 @import 'styles/variables.scss';
 @import 'styles/utility-mixins/index.scss';
 
@@ -28,8 +27,8 @@
     bottom: 0;
 
     border-radius: px-to-rem(9999px);
-    border: $spacing-px-2 solid map.get($color-gray, 200);
-    border-right-color: map.get($color-gray, 800);
+    border: $spacing-px-2 solid var(--gray200);
+    border-right-color: var(--gray800);
     animation: spinner 1.1s infinite linear;
     content: '';
   }
