update primary gradients

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -144,7 +144,15 @@ $color-primary--default: (
   1000: #136fd1,
 );
 $color-gradient--default: (
-  'primary': linear-gradient(175deg, #26aaf4 0%, #126fd1 100%),
+  'primary':
+    linear-gradient(
+      355deg,
+      #126fd1 2.51%,
+      #1d92e6 32.4%,
+      #25a3eb 59.83%,
+      #1c92e6 81.88%,
+      #126fd1 96.58%
+    ),
   'primary--light': linear-gradient(175deg, #ffffff 0%, #f7fafc 100%),
 );
 
@@ -165,7 +173,15 @@ $color-primary--search: (
   1000: #b21ce8,
 );
 $color-gradient--search: (
-  'primary': linear-gradient(175deg, #de32ed 0%, #b31ce8 100%),
+  'primary':
+    linear-gradient(
+      355deg,
+      #b21ce8 2.51%,
+      #c923eb 32.4%,
+      #de32ed 59.83%,
+      #c923eb 81.88%,
+      #b21ce8 96.58%
+    ),
   'primary--light': linear-gradient(175deg, #ffffff 0%, #f9f5fa 100%),
 );
 
