--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,23 @@ body {
   &.modal-open {
     overflow-y: hidden;
   }
+
+  /* Color themes */
+  @include theme-to-custom-properties($color-flame, 'flame');
+
+  &.theme-default {
+    @include theme-to-custom-properties($color-gray--default, 'gray');
+    @include theme-to-custom-properties($color-primary--default, 'primary');
+    @include theme-to-custom-properties($color-gradient--default, 'gradient-');
+    @include theme-to-custom-properties($color-logo--default, 'logo');
+  }
+
+  &.theme-search {
+    @include theme-to-custom-properties($color-gray--search, 'gray');
+    @include theme-to-custom-properties($color-primary--search, 'primary');
+    @include theme-to-custom-properties($color-gradient--search, 'gradient-');
+    @include theme-to-custom-properties($color-logo--search, 'logo');
+  }
 }
 
 a {
