add 2 more modifiers

--- a/src/components/shared/Input/index.scss
+++ b/src/components/shared/Input/index.scss
@@ -19,4 +19,12 @@
   &--noborder {
     @include form-input--noborder;
   }
+
+  &--white {
+    @include form-input--white;
+  }
+
+  &--bold {
+    @include form-input--bold;
+  }
 }
